--- a/client/src/styles/pages/feed.scss
+++ b/client/src/styles/pages/feed.scss
@@ -3,4 +3,13 @@
 @import '../components/createPost.scss';
 @import '../components/comments.scss';
 
+.imgLogo{
+    text-align: center;
+    &__pic{
+    height:200px;
+        
+    }
 
+    
+
+}
