--- a/client/src/styles/components/connectionForm.scss
+++ b/client/src/styles/components/connectionForm.scss
@@ -3,6 +3,7 @@
     display:flex;
     flex-direction: column;
     justify-content: space-between;
+   
 }
 
 
@@ -17,9 +18,7 @@
           border-style:groove;
           border-width: 1px;
 
-      &__logo{
-        margin-top:40px;
-      }    
+         
 
     }
     &__Form{
@@ -36,4 +35,9 @@
     padding:10px;
     font-size: 15px;
     }
+}
+.accueil-logo{
+    margin-top:80px;
+height:150px;
+
 }
