--- a/client/src/styles/components/card.scss
+++ b/client/src/styles/components/card.scss
@@ -1,20 +1,110 @@
 .Card {
-    border: 1px  orange;
-    border-style: groove;
-    border-radius: 33px;
-    margin:25px;
-    padding:30px;
-    display:flex;
-    flex-direction: row;
-    
-    &__content{
-        width:100%;
+  border: 1px orange;
+  border-style: groove;
+  border-radius: 33px;
+  margin: 25px;
 
-        &--footer{
-            display:flex;
-            justify-content: space-between;
-        }
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  margin-right: auto;
+  margin-left: auto;
+
+  &__content {
+    width: 100%;
+    &--header {
+      display: flex;
+      align-items: center;
+      margin-bottom: 40px;
+      padding: 30px;
+      border-top-left-radius: 33px;
+      border-top-right-radius: 33px;
+      border-bottom: 1px solid lightgrey;
+    }
+    &--modifyPost {
+      width: 80%;
+      margin: auto;
+      justify-content: center;
+      display: flex;
+      align-items: center;
+    }
+    &--formUpdate {
+      width: 80%;
+      height: 150px;
+      border-color: orange;
+      border-radius: 16px;
+      margin: 30px;
+    }
+    &--formUpdate::placeholder {
+      text-align: center;
+    }
+    &--btnUpdate {
+      padding: 5px 15px 5px 15px;
+      margin: 10px;
+      background-color: orange;
+      font-size: 15px;
+      font-weight: bold;
+      border-radius: 33px;
+      border: none;
+    }
+    &--headerLeft {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+    }
+    &--pseudo {
+      padding-left: 10px;
+    }
+    &--userPicture {
+      height: 70px;
+      margin-right: 30px;
+    }
+    &--picture {
+      display: flex;
+      height: 600px;
+      width: 80%;
+      margin: auto;
+    }
+    &--text {
+      text-align: center;
     }
 
-   
+    &--footer {
+      display: flex;
+      justify-content: space-between;
+      background-color: rgb(241, 234, 234);
+      padding: 30px;
+      border-bottom-left-radius: 33px;
+      border-bottom-right-radius: 33px;
+    }
+  }
+}
+.updatePost {
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  &__Icon {
+    height: 25px;
+  }
+}
+.postInteractions {
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  &__Icon {
+    margin-right: 10px;
+    height: 25px;
+  }
+  &__iconHeart {
+    margin-right: 10px;
+    height: 25px;
+    color: red;
+  }
+}
+.date {
+  font-style: italic;
+  color: grey;
 }
