--- a/client/src/styles/components/comments.scss
+++ b/client/src/styles/components/comments.scss
@@ -1,49 +1,52 @@
-.comments{
-  &__content{
-   border:0.5px solid rgb(161, 143, 143);
-   border-radius:33px;
-   margin:10px;
-   padding:20px;
-
-   &--input{
-    width:60%;
-    height:60px;
-   }
-
-   &--btn{
-    padding:7px 25px 7px 25px ;
-    margin:10px;
-    background-color: orange;
-    font-size: 15px;
-    font-weight: bold;
-    border-radius:33px;
-    border:none;
-}
-
-   &--header{
-    display:flex;
-    align-items: center;
-    justify-content: space-around;
-   }
-
-   &--top{
-    display:flex;
-    align-items: center;
-    justify-content: space-around;
-   
-   }
-   &--text{
-    text-align: center;
-   }
-   
+.comments {
+  &__date {
+    font-style: italic;
+    color: lightgray;
   }
-  &__form{
+  &__content {
+    border: 0.5px solid rgb(161, 143, 143);
+    border-radius: 33px;
+    margin: 10px;
+    padding: 20px;
+    &--userPicture {
+      height: 70px;
+    }
+    &--input {
+      width: 60%;
+      height: 60px;
+    }
+
+    &--btn {
+      padding: 7px 25px 7px 25px;
+      margin: 10px;
+      background-color: orange;
+      font-size: 15px;
+      font-weight: bold;
+      border-radius: 33px;
+      border: none;
+    }
+
+    &--header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-bottom: 1px solid grey;
+      padding-bottom: 20px;
+    }
+
+    &--top {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+    }
+    &--text {
+      text-align: center;
+    }
+  }
+  &__form {
     text-align: center;
-   
-   }
-   &__pseudo{
-    color:grey;
-    padding:10px;
-    
-   }
+  }
+  &__pseudo {
+    padding: 10px;
+  }
 }
