--- a/client/src/styles/components/createPost.scss
+++ b/client/src/styles/components/createPost.scss
@@ -1,11 +1,49 @@
-.createPost{
-    text-align:center;
-    &__addFile{
-        margin:5px;
-        padding: 10px;
-       
-    }
-    &__sendForm{
-        margin:30px;
-    }
+.createPost {
+  width: 40%;
+  margin: auto;
+  background-color: rgb(248, 225, 229);
+  padding: 30px;
+  border-radius: 16px;
+
+  &__iconImg {
+    position: absolute;
+    height: 25px;
+  }
+  &__profilImage {
+    border-radius: 20px;
+    height: 125px;
+    margin: 10px;
+  }
+  &__postForm {
+    width: 70%;
+    margin: auto;
+    height: 120px;
+    border-radius: 33px;
+  }
+  &__content {
+    text-align: center;
+  }
+  &__addFile {
+    display: flex;
+    justify-content: center;
+    margin-left: 40%;
+    padding: 10px;
+  }
+  &__inputFile {
+    position: relative;
+    z-index: 2;
+    opacity: 0;
+  }
+  &__sendForm {
+    padding: 7px 25px 7px 25px;
+    background-color: orange;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 33px;
+    border: none;
+    margin: 10px;
+  }
+  &__noId {
+    text-align: center;
+  }
 }
