--- a/client/src/styles/components/createPost.scss
+++ b/client/src/styles/components/createPost.scss
@@ -4,7 +4,13 @@
   background-color: rgb(248, 225, 229);
   padding: 30px;
   border-radius: 16px;
-
+  &__postError {
+    font-size: 12px;
+    color: red;
+    flex-wrap: wrap;
+    font-style: italic;
+    padding: 7px;
+  }
   &__iconImg {
     height: 25px;
   }
@@ -14,7 +20,7 @@
     margin: auto;
   }
   &__postForm {
-    width: 70%;
+    width: 80%;
     margin: auto;
     height: 120px;
     border-radius: 33px;
@@ -45,9 +51,6 @@
 }
 @media screen and (max-width: 468px) {
   .createPost {
-    &__postForm {
-      width: 100%;
-    }
     &__profilImage {
       border-radius: 20px;
       height: 125px;
