--- a/client/src/styles/components/navbar.scss
+++ b/client/src/styles/components/navbar.scss
@@ -1,8 +1,8 @@
 .Navbar {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 0px 100px 20px 100px;
+  padding: 0px 20px 20px 20px;
   margin-bottom: 70px;
   box-shadow: 6px 1px 30px black;
 }
@@ -17,7 +17,6 @@
   padding-left: 20px;
 }
 .Bonjour {
-  list-style: none;
   font-size: 20px;
   font-weight: bold;
 }
@@ -27,5 +26,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+  .Bonjour {
+    width: 100%;
+    font-size: 13px;
+    font-weight: bold;
+    text-align: center;
   }
 }
